# ai-projects

./: .gitignore  README.md  pyproject.toml
rag-application/: .env.template  pyproject.toml  requirements.txt
rag-application/data/: Angular Signals Architecture.txt
rag-application/docs/: packages.md  project_structure.md
rag-application/src/: __init__.py  config.py  generation.py  ingest.py  main.py  retrieval.py
